--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,6 @@
-.container {
-  border-style: solid;
-  border-radius: 10px;
-  border-color: blueviolet;
-  padding: 15px;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
