--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<h1>{{title}}</h1>
+<header>
+  <h1>{{title}}</h1>
+  <app-buton
+    color="green"
+    text="Add Task"
+    (btnClick)="toggleAddTask()"
+  ></app-buton>
+</header>
